--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <p style="padding-bottom:10px">A: Nope lol
 <p>Q: Why does this HTML look so bad?
 <p style="padding-bottom:10px">A: I'm lazy
-<p>Click <a href="https://tinyurl.com/uax6jvt7">this link</a> to copy the link to your clipboard and share with your fiends.
+<p>Click <a href="https://tinyurl.com/uax6jvt7">here</a> to copy the link to your clipboard and share with your fiends.
 </div>
 </body>
